Thu Jun 13 11:36:37 2002  Owen Taylor  <otaylor@redhat.com>
 
 	* gtk/gtkdnd.c (_gtk_drag_source_handle_event): Save
 	the initial grab time, use that when changing the
 	pointer. (#83052, help from Dave Camp tracking it down.)
 
Thu Jun 13 16:42:40 2002  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreestore.c (gtk_tree_store_finalize): traverse all nodes,
	not just the leafs (pointed out by Josh Parsons)

2002-06-12  Havoc Pennington  <hp@redhat.com>
 
 	* configure.in: check that pango has Xft2 support, instead of
 	checking whether Xft2 exists.

Wed Jun 12 17:46:53 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkentry.c (blink_cb): Add an informative 
	g_warning() when the entry has lost a focus-out-event.
	(#78305, Michel Selten)

Wed Jun 12 17:31:15 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkmenushell.c (gtk_menu_shell_real_select_item): 
	Check to see if the menu item is selectable before
	setting menu_shell->active_menu_item. This hopefully
	will keep gail from getting confused.
	(#84115, Remus Draica)

Wed Jun 12 17:13:13 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwindow.c (gtk_window_move_resize): Fix bug
	where if CENTER_ON_PARENT was set, but there was
	no parent, GDK_HINT_POS would be set, resulting
	in a dialog at 0,0. (#83479, Havoc Pennington)

Wed Jun 12 16:34:13 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkmenubar.c: When fetching the menubars for
	the window for F10 handling, only add viewable menu
	bars. (Apparently, people sometimes put menu bars
	in notebook pages!) (Tim Janik, #82627)

Wed Jun 12 16:21:38 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkcheckbutton.c (gtk_check_button_size_allocate): 
	Clamp size of child to at least 1x1. (#82431, 
	Boris Shingarov.)

Wed Jun 12 15:43:38 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkspinbutton.c (gtk_spin_button_snap): Handle
	0 increment, to fix division-by-zero problem.
	(#82816, George Lebl.)

Wed Jun 12 15:38:01 2002  Owen Taylor  <otaylor@redhat.com>
